--- a/index.html
+++ b/index.html
@@ -679,31 +679,31 @@
         { title: "📘 Lec4: HOMER Pro overview", url: "https://iframe.mediadelivery.net/embed/460802/39859c01-023a-43ea-b679-ecb7e59f65a4?autoplay=0" }
       ],
       [
-        { title: "📘 Basic of Economic", url: "https://iframe.mediadelivery.net/embed/460802/694dff4b-b351-4583-a3b7-7f0661a9cdda?autoplay=0" },
-        { title: "📘 HOMER Practice Part I", url: "https://iframe.mediadelivery.net/embed/460802/cd2e1dd0-ee64-4890-833d-ca146a1e328d?autoplay=0" },
-        { title: "📘 HOMER Practice Part II", url: "https://iframe.mediadelivery.net/embed/460802/8e0fb4ad-4903-443d-9bae-78fe51d63bb6?autoplay=0" },
-        { title: "📘 HOMER Features", url: "https://iframe.mediadelivery.net/embed/460802/04551e31-ec0a-4568-977e-b771fe20a217?autoplay=0" }
+        { title: "📘 Lec1:Basic of Economic", url: "https://iframe.mediadelivery.net/embed/460802/694dff4b-b351-4583-a3b7-7f0661a9cdda?autoplay=0" },
+        { title: "📘 Lec2:HOMER Practice Part I", url: "https://iframe.mediadelivery.net/embed/460802/cd2e1dd0-ee64-4890-833d-ca146a1e328d?autoplay=0" },
+        { title: "📘 Lec3:HOMER Practice Part II", url: "https://iframe.mediadelivery.net/embed/460802/8e0fb4ad-4903-443d-9bae-78fe51d63bb6?autoplay=0" },
+        { title: "📘 Lec4:HOMER Features", url: "https://iframe.mediadelivery.net/embed/460802/04551e31-ec0a-4568-977e-b771fe20a217?autoplay=0" }
       ],
       [
-        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
-        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
-        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
-        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
-        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+        { title: "📘 Lec1:Off grid-Microgrid Load Porfile", url: "https://iframe.mediadelivery.net/embed/460802/2e186821-a1c2-459c-99a9-bbe6c76ddeb4?autoplay=0" },
+        { title: "📘 Lec2:Off grid Proposed System I", url: "https://iframe.mediadelivery.net/embed/460802/c6cfe138-8199-4a64-9faa-0d82a8668e8f?autoplay=0" },
+        { title: "📘 Lec3:Off grid Proposed System II", url: "https://iframe.mediadelivery.net/embed/460802/a6e3daee-5343-4340-9c18-0323e88cc073?autoplay=0" },
+        { title: "📘 Lec4:Advance grid setting", url: "https://iframe.mediadelivery.net/embed/460802/fcd8e17e-d41e-4ba7-b371-57bb920d88d5?autoplay=0" },
+        { title: "📘 Lec5:On grid Proposed System", url: "https://iframe.mediadelivery.net/embed/460802/0a8882db-f43b-4669-a5a1-7136cf2aed68?autoplay=0" }
       ],
       [
-        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
-        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
-        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
-        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
-        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+        { title: "📘 Lec1:Project Development Method", url: "https://iframe.mediadelivery.net/embed/460802/422fbba2-4479-4811-a705-b2c09273ee5a?autoplay=0" },
+        { title: "📘 Lec2:Project Management", url: "https://iframe.mediadelivery.net/embed/460802/6c431854-223f-4971-85f4-d49b19fd888e?autoplay=0" },
+        { title: "📘 Lec3:Scope Of Work", url: "https://iframe.mediadelivery.net/embed/460802/d072e78e-f7b1-4020-a4a1-a7c974b7c4fb?autoplay=0" },
+        { title: "📘 Lec4:Project Timeline", url: "https://iframe.mediadelivery.net/embed/460802/0b7fa65a-09a6-4bee-a6d9-68e47346bc0c?autoplay=0" }
+      
       ],
       [
-        { title: "📘 Energy Storage I", url: "https://iframe.mediadelivery.net/embed/460802/31a6b762-98a0-4a89-a56e-532f9df76766?autoplay=0" },
-        { title: "📘  Energy Storage II", url: "https://www.youtube.com/embed/mNPXseyrxMU" },
-        { title: "📘 المحاضرة 3", url: "https://www.youtube.com/embed/vid8" },
-        { title: "📘 المحاضرة 4", url: "https://www.youtube.com/embed/vid9" },
-        { title: "📘 المحاضرة 5", url: "https://www.youtube.com/embed/vid10" }
+        { title: "📘 Lec1:Cost Management I", url: "https://iframe.mediadelivery.net/embed/460802/2bb1c4fc-ec9c-46b0-89e7-6bd65f598759?autoplay=0" },
+        { title: "📘 Lec2:Cost Management II", url: "https://iframe.mediadelivery.net/embed/460802/0260f289-c0eb-4ebd-bebb-fb3b23b6e691?autoplay=0" },
+        { title: "📘 Lec3:Quality/Resourse Management", url: "https://iframe.mediadelivery.net/embed/460802/af9d28b3-965f-4af3-af25-eaae935b3aa1?autoplay=0" },
+        { title: "📘 Lec4:Risk Management", url: "https://iframe.mediadelivery.net/embed/460802/fb5d95b3-67ca-4f36-a4df-79529500d02e?autoplay=0" },
+        { title: "📘 Lec5:Final:Project Charter", url: "https://iframe.mediadelivery.net/embed/460802/8e03998e-e4b4-4dc8-9b80-65a40fa801ac?autoplay=0" }
       ],
      ];
 
